# walkernest

./: .env  .env.development  .gitignore  .npmrc  Dockerfile.api  Dockerfile.seed  Dockerfile.seed-neo4j  Dockerfile.seed-postgis  LICENSE  README.md  _citylist.json  citylist-metropolitan.csv  citylist.csv  command.txt  commands.txt  data_fetcher.py  dataset.py  deploy.sh  deploy_process.txt  docker-compose-dev.yml  docker-compose.yml  file_utils.py  generate.py  geometry_utils.py  main.py  network_utils.py  nx.json  package-lock.json  package.json  pregenerate-dataset.py  pyproject.toml  pytest.ini  qgis.md  requirements-all.txt  requirements-test.txt  requirements.txt  seed-neo4j.py  seed-neo4j.sh  seed-postgis.sh  seed.py  (+4 more)
_old/: generate.py  test.py
app/: crud.py  db.py  main.py
backend/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.seed  Dockerfile.seed.dev  project.json  pytest.ini  requirements-test.txt  requirements.txt
cdphe_open_data/: citylist-full.csv  target_citylist.csv
cron/: osm_data_sync.sh
data/: citylist.json
deploy/: deploy.sh  docker-compose.yml  postgres-setup.sh  project.json  run-prod.sh
dev/: docker-compose-dev.yml  run-dev.sh
develop/: docker-compose.yml  project.json  run-dev.sh
ec2/: cleanup.sh  deploy.sh  docker-compose.yml  docker_setup.sh  initialize.sh  postgres_setup.sh  run-ec2.sh  seed.sh  ssl_init.sh  ssl_setup.sh  walkernest-key-pair.pem
frontend/: .dockerignore  .env  .env.development  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  components.json  index.html  jest.config.ts  package-lock.json  package.json  project.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
network_nodes/: arvada_park.json  arvada_supermarket.json  aurora_apartment.json  boulder_apartment.json  brighton_apartment.json  broomfield_apartment.json  castle rock_supermarket.json  centennial_park.json  centennial_supermarket.json  commerce city_apartment.json  denver_park.json  denver_supermarket.json  englewood_supermarket.json  golden_apartment.json  golden_park.json  lakewood_park.json  (+23 more)
(+574 files in other folders)
